Basic working version

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en" ng-app="DockerWatch">
+<html lang="en" ng-app="EntDev">
 <head>
   <meta charset="utf-8">
-  <title>DockerWatch</title>
+  <title>Enterprise Development</title>
   <script type="text/javascript" src="../scripts/angular.min.js"></script>
   <script type="text/javascript" src="../scripts/angular-route.min.js"></script> 
   <link href="styles/bootstrap.min.css" rel="stylesheet">
@@ -13,12 +13,11 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#/">DockerWatch</a>
+      <a class="navbar-brand" href="#/">Enterprise Development</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
         <li><a href="#/">Home</a></li>
-        <li><a href="#/projects">Projects</a></li>
     </div>
   </div>
 </nav>
