--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,13 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#/">Enterprise Development</a>
+      <a class="navbar-brand" href="#/home">Enterprise Development</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
-        <li><a href="#/">Home</a></li>
+        <li><a href="#/home">Home</a></li>
+        <li><a href="#/login">Login</a></li>
+        <li><a href="#/register">Register</a></li>
     </div>
   </div>
 </nav>
