--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
     </div>
     <div>
       <ul class="nav navbar-nav">
-        <li><a href="#/home">Home</a></li>
-        <li><a href="#/login">Login</a></li>
-        <li><a href="#/register">Register</a></li>
+        <li><a href="#/home" ng-show="loggedInUser != null">Home</a></li>
+        <li><a href="#/login" ng-show="loggedInUser == null">Login</a></li>
+        <li><a href="#/register" ng-show="loggedInUser == null">Register</a></li>
         <li><a ng-click="logout()" ng-show="loggedInUser != null">Logout</a></li>
     </div>
   </div>
