--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
         <li><a href="#/login" ng-show="loggedInUser == null">Login</a></li>
         <li><a href="#/register" ng-show="loggedInUser == null">Register</a></li>
         <li><a ng-click="logout()" ng-show="loggedInUser != null">Logout</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li ng-if="loggedInUser != null"><a>{{loggedInUser.username}}</a></li>
+      </ul>
     </div>
   </div>
 </nav>
